--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -123,7 +123,8 @@
             "useFrameworks": "static"
           }
         }
-      ]
+      ],
+      "./plugins/withGoogleSignInConfig"
     ],
     "experiments": {
       "typedRoutes": true
