--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "@silevis/reactgrid": "^4.1.17",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@syncfusion/ej2-react-spreadsheet": "^32.1.20",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-query-devtools": "^5.75.2",
