feat: spreadsheet mode syncfusion

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,7 +55,16 @@
     "@silevis/reactgrid": "^4.1.17",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@syncfusion/ej2-base": "^32.1.19",
+    "@syncfusion/ej2-buttons": "^32.1.19",
+    "@syncfusion/ej2-dropdowns": "^32.1.20",
+    "@syncfusion/ej2-grids": "^32.1.20",
+    "@syncfusion/ej2-inputs": "^32.1.20",
+    "@syncfusion/ej2-lists": "^32.1.19",
+    "@syncfusion/ej2-navigations": "^32.1.19",
+    "@syncfusion/ej2-popups": "^32.1.19",
     "@syncfusion/ej2-react-spreadsheet": "^32.1.20",
+    "@syncfusion/ej2-splitbuttons": "^32.1.19",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-query-devtools": "^5.75.2",
