--- a/frontend/package.json
+++ b/frontend/package.json
@@ -194,6 +194,7 @@
     "turndown": "^7.2.1",
     "turndown-plugin-gfm": "^1.0.2",
     "typescript": "^5",
+    "vanilla-cookieconsent": "^3.1.0",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
     "y-indexeddb": "^9.0.12",
