--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,9 +17,6 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noImplicitAny": true,
     "ignoreDeprecations": "5.0",
     "plugins": [
       {
@@ -42,5 +39,6 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "extends": "expo/tsconfig.base"
 }
