--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "android": "expo run:android",
-    "ios": "expo run:ios"
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.2",
@@ -131,7 +129,6 @@
     "comment-json": "^4.2.5",
     "date-fns": "^3.6.0",
     "diff": "^7.0.0",
-    "expo": "^54.0.30",
     "extract-colors": "^4.2.0",
     "file-saver": "^2.0.5",
     "flags": "^4.0.2",
@@ -203,8 +200,7 @@
     "y-indexeddb": "^9.0.12",
     "yjs": "^13.6.27",
     "zod": "^3.25.76",
-    "zustand": "^5.0.3",
-    "react-native": "0.81.5"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
